# musicplayer

playerproxy/: CMakeLists.txt
playerproxy/.ngrest/: name  services
playerproxy/playerproxy/: CMakeLists.txt
playerproxy/playerproxy/src/: Client.cpp  Common.cpp  Common.h  MessageHelper.cpp  MessageHelper.h  MusicPlayer.cpp  MusicPlayer.h  MusicPlayerHandler.cpp  MusicPlayerHandler.h  Settings.h  playerProxy.cpp  playerProxy.h
