cmake_minimum_required(VERSION 2.6)

project (playerproxy CXX)

set(PLAYERPROXY_HEADERS playerProxy.h)

set(PROJECT_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
set(PLAYERPROXY_CODEGEN_DIR "${PROJECT_BINARY_DIR}/codegen")

PREPEND(PLAYERPROXY_HEADERS_PATHS ${PROJECT_SOURCE_DIR} ${PLAYERPROXY_HEADERS})

CODEGEN_FILES(PLAYERPROXY_CODEGEN_SOURCES ${PLAYERPROXY_CODEGEN_DIR} ${PLAYERPROXY_HEADERS})

add_custom_command(OUTPUT ${PLAYERPROXY_CODEGEN_SOURCES}
    COMMAND ${NGREST_BIN_PATH}ngrestcg -i "${PROJECT_SOURCE_DIR}" -o ${PLAYERPROXY_CODEGEN_DIR} -t service ${PLAYERPROXY_HEADERS}
    DEPENDS ${PLAYERPROXY_HEADERS_PATHS}
)

file(GLOB PLAYERPROXY_SOURCES ${PROJECT_SOURCE_DIR}/*.cpp)

list(APPEND PLAYERPROXY_SOURCES ${PLAYERPROXY_CODEGEN_SOURCES})

include_directories(${PROJECT_SOURCE_DIR} $ENV{NGREST_EXT_INCLUDES})

add_library(playerproxy MODULE ${PLAYERPROXY_SOURCES})

set_target_properties(playerproxy PROPERTIES PREFIX "")
set_target_properties(playerproxy PROPERTIES
    LIBRARY_OUTPUT_DIRECTORY "${PROJECT_SERVICES_DIR}"
)

target_link_libraries(playerproxy ngrestutils ngrestcommon ngrestjson ngrestengine $ENV{NGREST_EXT_LIBS})
